# cherry-recommends

./: .gitignore  README.md  azurepipelines-coverage.yml
app/: .gitignore  README.md  app.sln  azure-pipelines.yaml
app/aws/: AwsInfrastructure.cs  Program.cs  Pulumi.yaml  aws.csproj
app/azure/: AnalyticsKeyVault  AppStack.cs  AppSvc.cs  Auth0.cs  AzureML.cs  AzureSynapse.cs  ComponentWithStorage.cs  DatabaseComponent.cs  IpAddresses.cs  MultitenantDatabaseComponent.cs  Program.cs  Pulumi.canary.yaml  Pulumi.demo.yaml  Pulumi.dev.yaml  Pulumi.dev2.yaml  Pulumi.emil_qa.yaml  Pulumi.emil_test.yaml  Pulumi.mosh.yaml  Pulumi.multi-dev.yaml  Pulumi.phoria.yaml  Pulumi.production.yaml  Pulumi.single-dev.yaml  Pulumi.upstreet-dev.yaml  Pulumi.upstreet.yaml  (+7 more)
clients/: azure-pipelines.yml
clients/python/: LICENSE  README.md  client.py  client_test.py  environment.py  pyproject.toml  run-simulation.py
clients/python/signalboxclient/: __init__.py  client.py  client_functions.py  exceptions.py  experiments.py  features.py  items_recommenders.py  pagination.py  parameter_recommenders.py  parameters.py  product_recommenders.py  products.py  target_variables.py  touchpoints.py  trackedusers.py
clients/python/tests/: .local.env  client_test.py  context.py  environment.py  generate_events.py  run-simulation.py  setup-simulation.py
demo/: package-lock.json  package.json
docs/: .gitignore  azure-pipelines.yaml  deploy.sh
ml/: .gitignore  README.md  conda_environment.yml  measure_value.ipynb  recommender.py  recommender_funcs.py  requirements.txt  update_distributions.ipynb
(+3125 files in other folders)
